hphp/hack/test/typecheck/tconst_unsoundness.php.like_types.exp
File "tconst_unsoundness.php", line 16, characters 10-11:
Invalid return type (Typing[4110])
File "tconst_unsoundness.php", line 14, characters 49-52:
Expected ~Tout because it is an unenforceable type
File "tconst_unsoundness.php", line 14, characters 40-42:
But got Tin
